WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169602
Fix uninitialized public members in Webkit2/UIProcess/API/gtk
https://bugs.webkit.org/show_bug.cgi?id=169602
Summary
Fix uninitialized public members in Webkit2/UIProcess/API/gtk
Tomas Popela
Reported
2017-03-14 07:16:27 PDT
Found by Coverity scan.
Attachments
Patch
(19.85 KB, patch)
2017-03-14 07:17 PDT
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
Patch
(4.72 KB, patch)
2017-03-15 00:16 PDT
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
Patch
(4.72 KB, patch)
2017-03-15 07:01 PDT
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tomas Popela
Comment 1
2017-03-14 07:17:42 PDT
Created
attachment 304376
[details]
Patch
WebKit Commit Bot
Comment 2
2017-03-14 07:20:15 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Michael Catanzaro
Comment 3
2017-03-14 08:11:52 PDT
Comment on
attachment 304376
[details]
Patch I was going to say "Please fix the ChangeLog" again but now I realize that you've been including all of the changes from all previous patch. Definitely need to look at this. :P
Tomas Popela
Comment 4
2017-03-15 00:16:19 PDT
Created
attachment 304483
[details]
Patch Correct the patch (after I previously had some problems with webkit-patch).
Tomas Popela
Comment 5
2017-03-15 07:01:05 PDT
Created
attachment 304497
[details]
Patch Add the missing space.
Tomas Popela
Comment 6
2017-03-16 01:40:36 PDT
Comment on
attachment 304497
[details]
Patch Clearing flags on attachment: 304497 Committed
r214034
: <
http://trac.webkit.org/changeset/214034
>
Tomas Popela
Comment 7
2017-03-16 01:40:46 PDT
All reviewed patches have been landed. Closing bug.
Carlos Garcia Campos
Comment 8
2017-04-03 02:55:54 PDT
Initializing private structs to 0/nullptr is just noise, glib already fills them with 0 on allocation.
Michael Catanzaro
Comment 9
2017-04-03 07:31:01 PDT
(In reply to Carlos Garcia Campos from
comment #8
)
> Initializing private structs to 0/nullptr is just noise, glib already fills > them with 0 on allocation.
Yup, please don't do this!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug