Fix uninitialized public members in Webkit2/UIProcess/API/gtk https://bugs.webkit.org/show_bug.cgi?id=169602

Reviewed by Michael Catanzaro.

Found by Coverity scan.

* UIProcess/API/gtk/WebKitMimeInfo.cpp:
* UIProcess/API/gtk/WebKitSettings.cpp:
* UIProcess/API/gtk/WebKitWebViewBase.cpp:

Canonical link: https://commits.webkit.org/186706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214034 268f45cc-cd09-0410-ab3c-d52691b4dbfc